--- a/react-entrega-s1-nu-kenzie/src/components/ContainerPrincipal/ItemLista/style.css
+++ b/react-entrega-s1-nu-kenzie/src/components/ContainerPrincipal/ItemLista/style.css
@@ -3,10 +3,11 @@
   display: flex;
   align-items: baseline;
   justify-content: space-between;
-  border-left: 5px solid #03b898;
+  border-left: 5px solid;
   background: #f8f9fa;
   border-radius: 4px;
   border-radius: 4px 0px 0px 4px;
+  font-family: 'Nunito';
 }
 
 .textos {
@@ -15,14 +16,12 @@
   padding-left: 1.8rem;
 }
 .textos h2 {
-  font-family: 'Nunito';
   font-weight: 700;
   font-size: 16px;
   line-height: 30px;
   color: #212529;
 }
 .textos p {
-  font-family: 'Nunito';
   font-weight: 400;
   font-size: 12px;
   line-height: 22px;
@@ -37,7 +36,6 @@
   align-items: center;
 }
 .valorList p {
-  font-family: 'Nunito';
   font-weight: 400;
   font-size: 1.4rem;
   line-height: 22px;
